# zmux

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  build.zig  build.zig.zon  pyproject.toml
.github/: release-please-config.json  renovate.json
.github/actions/prepare-build/: action.yml
.github/workflows/: prepare-build.yml  release-please.yml  tests.yml
src/app/: main.zig
src/lib/: root.zig
