[project]
name = "zmux"
version = "0.0.1"
readme = "README.md"
authors = [{ name = "Thomas Kristensen", email = "thomas@sl.m04r.space" }]
license = "MIT"
license-files = ["LICEN[CS]E.*"]
requires-python = ">=3.11"
classifiers = ["Private :: Do Not Upload"]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pyproject-aliases>=0.2.0",
]

[tool.aliases]
check = "uv run pre-commit run --all-files"
build = "zig build --color auto --summary all"
fuzz = "uv run alias build test --fuzz"
release = "uv run alias build --release=safe release"
run = "zig build run"
test = "uv run alias build test"
watch = "zig build run --watch"
